--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -41,7 +41,8 @@ html(lang="ru")
       .headers-and-footers__item
         +footer({
           emailInputPlaceholder: "Email",
-          logoId: "footer-logo-1-id"
+          logoId: "footer-logo-1-id",
+          isTightBottom: true
         })
       div(class="headers-and-footers__item  headers-and-footers__item_short")
         +footer({ isShort: true, logoId: "footer-logo-2-id" })
