--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -37,6 +37,10 @@
     border-top: 1px solid transparentize($contentColor, .75);
   }
 
+  &_tight-bottom::after {
+    bottom: 70px;
+  }
+
   .text-content {
     width: 260px;
   }
@@ -99,7 +103,7 @@
 }
 
 .page-footer__content {
-  padding: 101px 0 96px;
+  padding: 102px 0 96px;
   display: flex;
 
   @media (max-width: 1100px) {
@@ -220,6 +224,10 @@
 
   @media (max-width: 555px) {
     flex-direction: column;
+  }
+
+  &_tight-bottom {
+    padding-bottom: 21px;
   }
 
   .copyright {
