--- a/src/page/room-details/room-details.pug
+++ b/src/page/room-details/room-details.pug
@@ -72,14 +72,16 @@ block content
           .room-details__column
             +bullet({
               title: "Правила",
+              isBigTitle: true,
               isTitleLeftPadding: true,
               items: [
                 { label: "Нельзя с питомцами" },
                 { label: "Без вечеринок и мероприятий" },
-                { label: "Время прибытия — после 13:00, а выезд до 12:00" }
+                { label: "Время прибытия — после 13:00, а выезд до 12:00", isPetty: true }
               ]
             })
             section.room-details__info
               h2.room-details__title Отмена
               p Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
-      +totalCard({ datePickerContainerCLass: 'room-details__date-picker-container' })
+      .room-details__total-card-wrap
+        +totalCard({ datePickerContainerCLass: 'room-details__date-picker-container' })
