Добавил position: relative;

--- a/src/components/total-card/total-card.scss
+++ b/src/components/total-card/total-card.scss
@@ -74,6 +74,7 @@
 }
 
 .total-card__date-inputs {
+  position: relative;
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
