#8 включил модификатор для bullet

--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -279,7 +279,7 @@ block content
               items: [
                 { label: "Нельзя с питомцами" },
                 { label: "Без вечеринок и мероприятий" },
-                { label: "Время прибытия — после 13:00, а выезд до 12:00" }
+                { label: "Время прибытия — после 13:00, а выезд до 12:00", isTight: true }
               ]
             })
       .form-elements__row
