#8 удалил переопределение стилей pagination из rooms

--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -290,4 +290,5 @@ block content
             each item in hotels
               li.hotels__item
                 +hotelCard(item)
-          +pagination()
+          .rooms-page__pagination      
+            +pagination()
