--- a/src/page/colors-and-type/colors-and-type.pug
+++ b/src/page/colors-and-type/colors-and-type.pug
@@ -75,5 +75,6 @@ block content
           +typograph({
               text: "This is the body text which is used for most of the design, like paragraphs, lists, etc.",
               label: "Body",
-              labelModif: "text"
+              labelModif: "text",
+              isTinyText: true
             })
