#8 удалил переопределение comment из room-details

--- a/src/page/room-details/room-details.scss
+++ b/src/page/room-details/room-details.scss
@@ -135,12 +135,8 @@
   margin-bottom: 39px;
 }
 
-.room-details__reviews .comment {
+.room-details__review-wrap {
   margin-bottom: 12px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
 }
 
 .room-details__info {
