--- a/src/page/room-details/room-details.pug
+++ b/src/page/room-details/room-details.pug
@@ -51,15 +51,16 @@ block content
               +pieChart()
           section.room-details__reviews
             h2(class="room-details__title  room-details__title_low-mb") Отзывы посетителей номера #[span.room-details__title-alt 2 отзыва]
-            +comment({
-                authorName: "Мурад Сарафанов",
-                datePost: "5 дней назад",
-                like: 12,
-                isLikeActive: true,
-                avatarSrc: "../../components/comment/murad.png",
-                text:
-                  "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
-              })
+            .room-details__review-wrap
+              +comment({
+                  authorName: "Мурад Сарафанов",
+                  datePost: "5 дней назад",
+                  like: 12,
+                  isLikeActive: true,
+                  avatarSrc: "../../components/comment/murad.png",
+                  text:
+                    "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
+                })
             +comment({
               authorName: "Патрисия Стёклышкова",
               datePost: "Неделю назад",
