--- a/src/components/text-content/text-content.scss
+++ b/src/components/text-content/text-content.scss
@@ -6,6 +6,15 @@
   line-height: 15px;
   font-weight: bold;
   text-transform: uppercase;
+
+  &_bordered-on-tablet {
+    @media (max-width: 768px) {
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+      font-size: 14px;
+      border-bottom: 2px solid $contentColor;
+    }
+  }
 }
 
 .text-content__paragraph {
