--- a/src/components/hotel-card/hotel-card.pug
+++ b/src/components/hotel-card/hotel-card.pug
@@ -8,10 +8,10 @@ mixin hotelCard(options = {})
   section.hotel-card
     div(class="hotel-card__wrap  glide")
       div(class="hotel-card__slider  glide__track" data-glide-el="track")
-        ul.glide__slides
+        ul(class="hotel-card__slides  glide__slides")
           each image in options.images
-            li.glide__slide #[img(src=image.src, alt=image.alt)]
-        div(class="glide__arrows" data-glide-el="controls")
+            li(class="hotel-card__slide  glide__slide") #[img(src=image.src, alt=image.alt)]
+        div(class="glide__arrows  hotel-card__arrows" data-glide-el="controls")
           button(class="glide__arrow  glide__arrow_left  hotel-card__slider-btn" data-glide-dir="<" type="button") Назад
           button(class="glide__arrow  glide__arrow_right  hotel-card__slider-btn  hotel-card__slider-btn_next" data-glide-dir=">" type="button") Вперед
         div(class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]")
