--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -220,7 +220,7 @@ block content
             p.filter__explan Стоимость за сутки пребывания в номере
           .filter__item
             +checkbox({
-              title: "Checkbox Buttons",
+              title: "Правила дома",
               listId: "checkbox-buttons",
               items: [
                 { id: "smoke", title: "Можно курить" },
@@ -279,8 +279,6 @@ block content
                 { id: "bed", title: "Кроватка", isChecked: true },
                 { id: "tv", title: "Телевизор" },
                 { id: "shampu", title: "Шампунь" },
-                { id: "tv2", title: "Телевизор" },
-                { id: "shampu2", title: "Шампунь" },
               ]
             })
       section.hotels
