#10 удалил лишний модификатор на обнуление z-index.

--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -74,4 +74,4 @@ mixin totalCard(options = {})
           p.total-card__total-text Итого
           .total-card__total-separator
           p.total-card__total-price 38 081₽
-        +button({ title: "Забронировать", isHaveIcon: true, isZeroZIndex: true, buttonType: "submit" })
+        +button({ title: "Забронировать", isHaveIcon: true, buttonType: "submit" })
