#9 исправил отсутствие ховера у кнопки

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -2,6 +2,8 @@
   position: relative;
   z-index: 0;
   padding: 10px 20px;
+  display: block;
+  box-sizing: border-box;
   width: 100%;
   font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 12px;
