#10 переименовал ключ isHaveIcon в withIcon

--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -43,12 +43,12 @@ mixin dateWishes()
             isBigLabel: true,
             isButtonSplit: true,
             isDownSplitAnimation: true,
-            isHaveIcon: true,
+            withIcon: true,
             placeholder: "Сколько гостей"
           })
           div(class="drop-down-container  js-drop-down-container")
         +button({
           title: "Подобрать номер",
-          isHaveIcon: true,
+          withIcon: true,
           buttonType: "submit"
         })
