--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -198,7 +198,7 @@ block content
               labelName: "Даты пребывания в отеле",
               isButtonSplit: true,
               isDownSplitAnimation: true,
-              isHaveIcon: true,
+              withIcon: true,
               placeholder: "Выберите дату",
               isBigLabel: true
             })
@@ -210,7 +210,7 @@ block content
               labelName: "Гости",
               isButtonSplit: true,
               isDownSplitAnimation: true,
-              isHaveIcon: true,
+              withIcon: true,
               placeholder: "3 гостя, 1 младенец",
               isBigLabel: true
             })
@@ -260,7 +260,7 @@ block content
               labelName: "Удобства номера",
               isButtonSplit: true,
               isDownSplitAnimation: true,
-              isHaveIcon: true,
+              withIcon: true,
               placeholder: "2 спальни, 2 кровати...",
               isBigLabel: true
             })
